force-app/main/default/objects/b3o__Invoice_Item__c/b3o__Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>Invoice Item</label>
    <nameField>
        <displayFormat>INV-I-{00000}</displayFormat>
        <label>Invoice Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>