force-app/main/default/objects/b3o__Invoice_Item__c/fields/b3o__Cost_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>b3o__Cost_per_Unit__c</fullName>
    <label>Cost per Unit</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>