force-app/main/default/objects/b3o__Invoice_Item__c/fields/b3o__Invoice__c.field-meta.xml
<CustomField>
    <fullName>b3o__Invoice__c</fullName>
    <label>Invoice</label>
    <referenceTo>b3o__Invoice__c</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>