force-app/main/default/objects/b3o__Invoice_Item__c/fields/b3o__PO_Number__c.field-meta.xml
<CustomField>
    <fullName>b3o__PO_Number__c</fullName>
    <label>PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>