force-app/main/default/objects/b3o__Invoice_Item__c/fields/b3o__Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>b3o__Total_Cost__c</fullName>
    <formula>b3o__Units__c *  b3o__Cost_per_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>