force-app/main/default/objects/b3o__Invoice_Item__c/fields/b3o__Units__c.field-meta.xml
<CustomField>
    <fullName>b3o__Units__c</fullName>
    <label>Units</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>